testsuite/tests/rename/should_fail/T16635a.stderr

T16635a.hs:11:17: error: Not in scope: type variable ‘a’
